[project]
name = "distill-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.45.0",
    "datasets>=3.2.0",
    "huggingface>=0.0.1",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "pysqlite3>=0.5.4",
]
